--- a/files/style.css
+++ b/files/style.css
@@ -71,14 +71,8 @@ audio {
 }
 
 ::-webkit-scrollbar {
-    height: 3px;
-    width: 3px;
-}
-::-webkit-scrollbar-thumb {
-    background-color: #99afbd;
-}
-::-webkit-scrollbar-track {
-    background-color: #18191c;
+    height: 0;
+    width: 0;
 }
 
 body[class="position-1"] .notify,
